pkg/xds/generator/meshexternalservice/testdata/01.sample.golden.yaml
resources:
- name: meshexternalservice_mes1
  resource:
    '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    dnsLookupFamily: V4_ONLY
    loadAssignment:
      clusterName: meshexternalservice_mes1
      endpoints:
      - lbEndpoints:
        - endpoint:
            address:
              pipe:
                path: unix:///tmp/example.sock
        - endpoint:
            address:
              socketAddress:
                address: 1.1.1.1
                portValue: 12345
        - endpoint:
            address:
              socketAddress:
                address: example.com
                portValue: 80
    name: meshexternalservice_mes1
    transportSocketMatches:
    - name: meshexternalservice_mes1
      transportSocket:
        name: envoy.transport_sockets.tls
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          commonTlsContext:
            tlsCertificates:
            - certificateChain:
                inlineBytes: YWJj
              privateKey:
                inlineBytes: YWJj
            tlsParams:
              tlsMaximumProtocolVersion: TLSv1_3
              tlsMinimumProtocolVersion: TLSv1_2
            validationContext:
              matchTypedSubjectAltNames:
              - matcher:
                  exact: example.com
                sanType: DNS
              - matcher:
                  prefix: spiffe://example.local/ns/local
                sanType: URI
              trustedCa:
                inlineBytes: dGVzdA==
    type: STRICT_DNS
- name: meshexternalservice_mes1
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 240.0.0.37
        portValue: 8080
    filterChains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          routeConfig:
            name: outbound:mes1
            requestHeadersToAdd:
            - header:
                key: x-kuma-tags
                value: '&kuma.io/service=web&'
            validateClusters: false
            virtualHosts:
            - domains:
              - '*'
              name: mes1
              routes:
              - match:
                  prefix: /
                route:
                  autoHostRewrite: true
                  cluster: meshexternalservice_mes1
                  timeout: 0s
          statPrefix: meshexternalservice_mes1
      name: meshexternalservice_filterchain_mes1
    name: meshexternalservice_mes1
    trafficDirection: OUTBOUND
