pkg/xds/generator/meshexternalservice/testdata/02.skip-all.input.yaml
type: MeshExternalService
name: mes1
mesh: default
match:
  type: HostnameGenerator
  port: 8080
  protocol: http
endpoints:
  - address: 1.1.1.1
    port: 12345
  - address: example.com
    port: 80
  - address: unix:///tmp/example.sock
tls:
  enabled: true
  allowRenegotiation: false
  verification:
    mode: SkipAll
    subjectAltNames:
      - type: Exact
        value: example.com
      - type: Prefix
        value: "spiffe://example.local/ns/local"
    caCert:
      inline: dGVzdA==
    clientCert:
      secret: "123"
    clientKey:
      secret: "123"
status:
  vip:
    ip: 242.0.0.1
