pkg/xds/generator/meshexternalservice/testdata/03.tcp.input.yaml
type: MeshExternalService
name: mes1
mesh: default
match:
  type: HostnameGenerator
  port: 8080
  protocol: tcp
endpoints:
  - address: 1.1.1.1
    port: 12345
