pkg/xds/generator/meshexternalservice/testdata/03.tcp.golden.yaml
resources:
- name: meshexternalservice_mes1
  resource:
    '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    loadAssignment:
      clusterName: meshexternalservice_mes1
      endpoints:
      - lbEndpoints:
        - endpoint:
            address:
              socketAddress:
                address: 1.1.1.1
                portValue: 12345
    name: meshexternalservice_mes1
    type: STATIC
- name: meshexternalservice_mes1
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 242.0.0.1
        portValue: 8080
    filterChains:
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: meshexternalservice_mes1
          statPrefix: meshexternalservice_mes1
      name: meshexternalservice_filterchain_mes1
    name: meshexternalservice_mes1
    trafficDirection: OUTBOUND
