pkg/xds/generator/meshexternalservice/testdata/04.grpc.input.yaml
type: MeshExternalService
name: mes1
mesh: default
match:
  type: HostnameGenerator
  port: 8080
  protocol: grpc
endpoints:
  - address: 1.1.1.1
    port: 12345
status:
  vip:
    ip: 242.0.0.1
