pkg/xds/generator/meshexternalservice/testdata/04.grpc.golden.yaml
resources:
- name: meshexternalservice_mes1
  resource:
    '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    loadAssignment:
      clusterName: meshexternalservice_mes1
      endpoints:
      - lbEndpoints:
        - endpoint:
            address:
              socketAddress:
                address: 1.1.1.1
                portValue: 12345
    name: meshexternalservice_mes1
    type: STATIC
    typedExtensionProtocolOptions:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicitHttpConfig:
          http2ProtocolOptions: {}
- name: meshexternalservice_mes1
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 242.0.0.1
        portValue: 8080
    filterChains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.grpc_stats
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
              emitFilterState: true
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          routeConfig:
            name: outbound:mes1
            requestHeadersToAdd:
            - header:
                key: x-kuma-tags
                value: '&kuma.io/service=web&'
            validateClusters: false
            virtualHosts:
            - domains:
              - '*'
              name: mes1
              routes:
              - match:
                  prefix: /
                route:
                  autoHostRewrite: true
                  cluster: meshexternalservice_mes1
                  timeout: 0s
          statPrefix: meshexternalservice_mes1
      name: meshexternalservice_filterchain_mes1
    name: meshexternalservice_mes1
    trafficDirection: OUTBOUND
