pkg/xds/generator/meshexternalservice/testdata/05.skip-all-only.input.yaml
type: MeshExternalService
name: mes1
mesh: default
match:
  type: HostnameGenerator
  port: 8080
  protocol: http
endpoints:
  - address: example.com
    port: 80
tls:
  enabled: true
  verification:
    mode: SkipAll
status:
  vip:
    ip: 242.0.0.1
